# func_util

./: pyproject.toml  readme.md  requirements.txt  tox.ini
examples/: flatten_complex_list.py  fuse_intersecting_set.py  group_intersecting_set.py  return_min_max_res.py  separate_nums_by_parity.py
func_util/: func_util.py
tests/: func_util_test.py  predicate_test.py
